# innerlens

./: .gitignore  CHANGELOG.md  NOTICE  README.md  RESULTS.md  eval_via_library.py  pyproject.toml
eval/: eval_baseline.py
examples/: client_test.py  smoke_m3.py
src/innerlens/: __init__.py  cli.py  core.py  demo.py  lenses.py  server.py
tests/: test_scoring.py
